src/components/cvaa-overlay/_cvaa-overlay.scss
@import '~styles/variables';

.overlay.cvaa-overlay {
  .sample {
    border: 2px solid rgba(255, 255, 255, 0.2);
    border-radius: 4px;
    font-size: 16px;
    font-weight: bold;
    line-height: 36px;
    text-align: center;
    padding: 0 31px;
    display: inline-block;
    margin: 0 12px;
    position: relative;

    &:not(.custom){
      cursor: pointer;
    }

    &.black-bg {
      background-color: #000;
    }
    &.yellow-text {
      color: #faff00;
    }
    .active-tick {
      height: 16px;
      width: 16px;
      border-radius: 8px;
      background-color: $brand-color;
      position: absolute;
      top: -5px;
      right: -5px;

      .icon {
        vertical-align: top;
      }
    }
    span {
      font-size: 16px !important;
      line-height: 1;
      vertical-align: middle;
    }
  }
  .button-save-cvaa {
    margin-top: 50px;
    height: 40px;
    width: 400px;
    max-width: 100%;
    border: 2px solid rgba(255, 255, 255, 0.2);
    border-radius: 4px;
    font-size: 16px;
    font-weight: bold;
    line-height: 38px;
    text-align: center;
    display: inline-block;
    color: #fff;
    text-decoration: none;
    cursor: pointer;
  }
  .custom-captions-applied {
    margin-top: 50px;
  }

  .custom-caption-form {
    width: 300px;
    max-width: 100%;
    margin: 0 auto;

    a {
      color: white;
      line-height: 36px;
      text-decoration: none;
      &:hover,
      &:focus {
        text-decoration: underline;
      }
    }

    .slider {
      float: right;
      width: 100px;
      margin-top: 5px;
    }
  }

  .preview-container {
    width: 100%;
    text-align: center;
    font-size: 16px;
  }
}

.player.size-sm {
  .overlay.cvaa-overlay {
    .sample {
      width: 30%;
      margin: 2.33%;
      padding: 0;

      &:first-child {
        margin-left: 0;
      }
      &:last-child {
        margin-right: 0;
      }

      &.custom {
        width: auto;
        padding: 0 10px;
      }
    }
    .button-save-cvaa,
    .custom-captions-applied {
      margin-top: 20px;
    }
  }
}

.font-size, .font-color, .font-family, .font-style, .font-opacity, .background-color, .background-opacity{
  background: initial;
}

